--- a/template/list.html
+++ b/template/list.html
@@ -1,32 +1,32 @@
 <div>
   {# <!-- prettier-ignore --> #}
-  {% if category %}
+  {% if _category %}
   <h3 class="divider divider-start divider-primary text-2xl text-neutral mb-10 mx-4">
-    {{category.name}}
-    {% if category.count > 0 %}
-      ({{category.count}})
+    {{_category.name}}
+    {% if _category.count > 0 %}
+      ({{_category.count}})
     {% endif %}
   </div>
   {% endif %}
-  {% if series %}
+  {% if _series %}
   <h3 class="divider divider-start divider-primary text-2xl text-neutral mb-10 mx-4">
-    {{series.name}}
-    {% if series.count > 0 %}
-      ({{series.count}})
+    {{_series.name}}
+    {% if _series.count > 0 %}
+      ({{_series.count}})
     {% endif %}
   </div>
   {% endif %}
-  {% if tag %}
+  {% if _tag %}
   <h3 class="divider divider-start divider-primary text-2xl text-neutral mb-10 mx-4">
-    {{tag.name}}
-    {% if tag.count > 0 %}
-      ({{tag.count}})
+    {{_tag.name}}
+    {% if _tag.count > 0 %}
+      ({{_tag.count}})
     {% endif %}
   </div>
   {% endif %}
   <ul id="articleList">
-    {% for item in list %}
-      {% if type === 'index' %}
+    {% for item in _contentList %}
+      {% if _type === 'index' %}
         {% if loop.index0 < 10 %}
           {% include 'listItem.html' %}
         {% endif %}
