feat:refactor cacher module

--- a/template/index.html
+++ b/template/index.html
@@ -29,5 +29,6 @@
   >
     {% include "basicLayout.html" %}
     <script src="{{baseUrl}}assets/js/common.js"></script>
+    {{_extends.extend_footer | safe}}
   </body>
 </html>
