--- a/template/markup/image.html
+++ b/template/markup/image.html
@@ -1,6 +1,6 @@
 <img
   class="post-image"
-  src="{{baseUrl}}${arguments[0]}"
-  title="${arguments[1]}"
-  alt="${arguments[2]}"
+  src="{{baseUrl}}${href}"
+  title="${text}"
+  alt="${text}"
 />
